🎨 style(stats-dialog.component.html): increase font size of mat-button-toggle-group to improve readability 🎨 style(stats-dialog.component.html): increase width and height of mat-dialog-content to provide more space for the chart 🎨 style(stats-dialog.component.html): add border-radius, background-color, and box-shadow to canvas element to improve visual appearance 🎨 style(stats-dialog.component.scss): increase line-height of mat-button-toggle-label-content to improve readability 🐛 fix(stats-dialog.component.ts): fix type declaration of chart ViewChild to remove optional operator 🐛 fix(stats-dialog.component.ts): fix setActiveElements method call to remove optional operator

--- a/front/src/app/top-right/config/config-dialog.component.scss
+++ b/front/src/app/top-right/config/config-dialog.component.scss
@@ -16,6 +16,10 @@ table {
 		width: 0px;
 		min-width: 0px;
 	}
+
+	.mat-card-header-text {
+		width: 100%;
+	}
 }
 
 h3 {
